<resources>
    <string name="app_name">Swimmer</string>
    <string name="signin_message">Type phone number to sign in</string>
    <string name="hint_username">User phone number</string>
    <string name="button_sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--logout_button fragment-->
    <string name="logout_msg">Tap to logout</string>
    <string name="logout_button">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="caption_lessons">Мои занятия</string>
    <string name="session_id_pref">CustomerId</string>
    <string name="app_pref">APP_PREFERENCES</string>
    <string name="BalanceTitle">Общий баланс занятий</string>
    <string name="emailTitle">E-mail</string>
    <string name="phoneTitle">Телефон</string>
    <string name="BalanceMoneyTitle">Баланс</string>
    <string name="phoneNumberMask">+375(__)___-__-__</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="profile_image_background_desc">Profile image background</string>
    <string name="app_logo_image_desc">app logo image</string>
    <string name="status_lesson_icon_desc">status lesson icon</string>
    <string name="image_lesson_desc">image lesson</string>
    <string name="error_login_message">Incorrect login data. Try again!</string>
    <string name="error_network_message">Network error, local data displayed</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="swimmer_desc">Европейский плавательный клуб MEVIS - лидер в обучении плаванию взрослых "с нуля" групповым методом. Филиалы в Москве, С.-Петербурге, Минске, Любеке, Барселоне. Собственная патентованная методика и опыт работы с 1999г.</string>
    <string name="social_links">Соц сети <a href="https://www.facebook.com/mevis.swim/">Facebook</a> <a href="https://vk.com/mevis.swim">ВКонтакте</a> <a href="https://www.instagram.com/mevis.swim">Instagram</a></string>
    <string name="youtube_link">Канал на <a href="https://www.youtube.com/c/mevisone">YouTube</a></string>
    <string name="mail_link">Написать письмо mevis-1@mail.ru</string>
    <string name="phone_link">Позвонить нам +375(44)588-77-66</string>
    <string name="site_link">Сайт школы http://www.swimmer.by/</string>
    <string name="about_school_title">О школе</string>
</resources>
